--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@mui/material": "^5.16.7",
     "apexcharts": "3.44.0",
     "axios": "^1.7.5",
+    "framer-motion": "^11.11.1",
     "moment": "^2.30.1",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
@@ -27,7 +28,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "6.17.0",
     "react-to-print": "^2.15.1",
-    "react-toastify": "^10.0.5"
+    "react-toastify": "^10.0.5",
+    "reactstrap": "^9.2.3"
   },
   "devDependencies": {
     "@types/mui-datatables": "^4.3.12",
