--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
     "react-apexcharts": "1.4.1",
+    "@yudiel/react-qr-scanner": "^2.0.8",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
