--- a/package.json
+++ b/package.json
@@ -16,14 +16,16 @@
     "@material-tailwind/react": "^2.1.9",
     "@mui/icons-material": "^5.16.7",
     "@mui/material": "^5.16.7",
+    "@use-symbology-scanner/react": "^1.1.0",
     "apexcharts": "3.44.0",
     "axios": "^1.7.5",
     "framer-motion": "^11.11.1",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^2.5.2",
     "moment": "^2.30.1",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
     "react-apexcharts": "1.4.1",
-    "@yudiel/react-qr-scanner": "^2.0.8",
     "react-dom": "^18.3.1",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.3.0",
