--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "framer-motion": "^11.11.1",
     "html2canvas": "^1.4.1",
     "jspdf": "^2.5.2",
+    "lucide-react": "^0.462.0",
     "moment": "^2.30.1",
     "mui-datatables": "^4.3.0",
     "react": "^18.3.1",
